src/main/java/com/example/dstudyserver/global/error/exception/CustomException.java
package com.example.dstudyserver.global.error.exception;

import com.example.dstudyserver.global.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException{
    private final ErrorCode errorCode;
}
